--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>main</title>
-    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/main.css?ver=1" type="text/css">
+    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
     <script src="./js/main.js"></script>
 </head>
 <body>
-    <div id="wrapper">
+    <div class="wrapper">
         <!-- header 시작 -->
         <header>
             <div class="home">
                 <h1>
-                    <a href="./main.html">COCODAS</a>
+                    <a href="/main">COCODAS</a>
                 </h1>
             </div>
             <div class="login">
@@ -21,7 +22,7 @@
                         <a href="#">회원가입</a>
                     </li>
                     <li>
-                        <a href="./login.html">COCODAS 로그인</a>
+                        <a href="/login">COCODAS 로그인</a>
                     </li>
                 </ul>
             </div>
