--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -10,8 +10,7 @@ a {
 
 li {
     border-left: 1px solid gray;
-    padding: 0px;
-    padding-left: 5px;
+    padding: 0 0 0 5px;
     font-size: 15px;
     display: inline-block;
     list-style: none;
