--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -10,6 +10,8 @@
 <form th:action="@{/user}" method="POST">
     email : <input type="text" name="email"> <br>
     password : <input type="password" name="password"> <br>
+    name : <input type="text" name="name"> <br>
+    addr : <input type="text" name="addr"> <br>
     <input type="radio" name="auth" value="ROLE_ADMIN,ROLE_USER"> admin
     <input type="radio" name="auth" value="ROLE_USER" checked="checked"> user <br>
     <button type="submit">Join</button>
