--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -11,12 +11,50 @@
     email : <input type="text" name="email"> <br>
     password : <input type="password" name="password"> <br>
     name : <input type="text" name="name"> <br>
-    addr : <input type="text" name="addr"> <br>
-    <input type="radio" name="auth" value="ROLE_ADMIN,ROLE_USER"> admin
+    addr :
+    <input id="member_addr" type="text" name="addr" placeholder="Address" style="width: 200px" readonly onclick="findAddr()"> <br>
+
+<!--    <input type="text" name="hobby" list="bigHobbyList" ><br>-->
+<!--    <datalist id="bigHobbyList">-->
+<!--        <option value="" selected disabled hidden>택1</option>-->
+<!--        <option value="운동"></option>-->
+<!--        <option value="영화"></option>-->
+<!--        <option value="독서"></option>-->
+<!--        <option value="이야기"></option>-->
+<!--        <option value="여행"></option>-->
+<!--    </datalist>-->
+    취미 :  <select name="hobby">
+        <option value="운동">운동</option>
+        <option value="독서">독서</option>
+        <option value="영화">영화</option>
+        <option value="여행">여행</option>
+        <option value="이야기">이야기</option>
+    </select>
+    auth: <input type="radio" name="auth" value="ROLE_ADMIN,ROLE_USER"> admin
     <input type="radio" name="auth" value="ROLE_USER" checked="checked"> user <br>
     <button type="submit">Join</button>
 </form> <br>
 
 <a href="/login">Go to login →</a>
+
 </body>
+<script>
+    function findAddr(){
+        new daum.Postcode({
+            oncomplete: function(data) {
+
+                var roadAddr = data.roadAddress; // 도로명 주소 변수
+                var jibunAddr = data.jibunAddress; // 지번 주소 변수
+                // 우편번호와 주소 정보를 해당 필드에 넣는다.
+                if(roadAddr !== ''){
+                    document.getElementById("member_addr").value = roadAddr;
+                }
+                else if(jibunAddr !== ''){
+                    document.getElementById("member_addr").value = jibunAddr;
+                }
+            }
+        }).open();
+    }
+</script>
+<script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
 </html>
