--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -11,9 +11,10 @@
     email : <input type="text" name="email"><br>
     password : <input type="password" name="password"> <br>
 <!--닉네임 중복 검사-->
+    //todo: ajax이용해서 데이터만 보내기
     <form th:action="@{/name}" method="get">
         name : <input type="text" name="name">
-        <button type="submit">중복 초복</button><br>
+        <button type="submit">중복</button><br>
     </form>
     addr :
     <input id="member_addr" type="text" name="addr" placeholder="Address" style="width: 200px" readonly onclick="findAddr()"> <br>
