--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -3,19 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <title>sign up</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 <body>
 <h1>Sign Up</h1> <hr>
 
 <form th:action="@{/main}" method="POST">
     email : <input type="text" name="email"><br>
+
+
     password : <input type="password" name="password"> <br>
-<!--닉네임 중복 검사-->
-    //todo: ajax이용해서 데이터만 보내기
-    <form th:action="@{/name}" method="get">
-        name : <input type="text" name="name">
-        <button type="submit">중복</button><br>
-    </form>
+
+    <!--닉네임 중복 검사-->
+    <div class="form-group">
+        <label for="user_id">닉네임</label>
+        <input type="text" class="form-control" id="user_id" name="name" placeholder="ID" required>
+        <div class="check_font" id="id_check"></div>
+    </div>
+
     addr :
     <input id="member_addr" type="text" name="addr" placeholder="Address" style="width: 200px" readonly onclick="findAddr()"> <br>
 
@@ -51,6 +56,50 @@
             }
         }).open();
     }
+</script>
+<script>
+    // 아이디 유효성 검사(1 = 중복 / 0 != 중복)
+    $("#user_id").blur(function() {
+        // id = "id_reg" / name = "userId"
+        var user_id = $('#user_id').val();
+        var idJ = /^[a-z0-9가-힣]{2,10}$/;
+        $.ajax({
+            url : '${pageContext.request.contextPath}/signup/idCheck?userId='+ user_id,
+            type : 'get',
+            success : function(data) {
+                console.log("1 = 중복o / 0 = 중복x : "+ data);
+
+                if (data == 1) {
+                    // 1 : 아이디가 중복되는 문구
+                    $("#id_check").text("사용중인 아이디입니다 :p");
+                    $("#id_check").css("color", "red");
+                    $("#reg_submit").attr("disabled", true);
+                } else {
+
+                    if(idJ.test(user_id)){
+                        // 0 : 아이디 길이 / 문자열 검사
+                        $("#id_check").text("");
+                        $("#reg_submit").attr("disabled", false);
+
+                    } else if(user_id == ""){
+
+                        $('#id_check').text('아이디를 입력해주세요 :)');
+                        $('#id_check').css('color', 'red');
+                        $("#reg_submit").attr("disabled", true);
+
+                    } else {
+
+                        $('#id_check').text("아이디는 한글,소문자,숫자 2~10자리만 가능합니다 :) :)");
+                        $('#id_check').css('color', 'red');
+                        $("#reg_submit").attr("disabled", true);
+                    }
+
+                }
+            }, error : function() {
+                console.log("실패");
+            }
+        });
+    });
 </script>
 <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
 </html>
