--- a/src/main/resources/static/css/signup.css
+++ b/src/main/resources/static/css/signup.css
@@ -1,7 +1,7 @@
-#mail_check_false{
+#email_check_false{
     background-color:#ebebe4;
 }
 
-#mail_check_true{
+#email_check_true{
     background-color:white;
 }
