--- a/src/main/resources/static/css/signup.css
+++ b/src/main/resources/static/css/signup.css
@@ -5,3 +5,51 @@
 #email_check_true{
     background-color:white;
 }
+span{
+    margin-left: 5px;
+    font-size: 20px;
+    font-weight: 500;
+    color: black;
+}
+.email_input_box{
+    border: 1px solid black;
+    height:20px;
+    padding: 10px 14px;
+}
+
+.email_input{
+    width:100%;
+    height:100%;
+    border:none;
+    font-size:28px;
+
+}
+
+.email_check_input_box{
+    border: 1px solid black;
+    height: 20px;
+    padding: 10px 14px;
+    width: 61%;
+    float: left;
+}
+
+.email_check_input{
+    width:100%;
+    height:100%;
+    border:none;
+    font-size:20px;
+
+}
+
+.email_check_button{
+    border: 1px solid black;
+    height: 40px;
+    width: 30%;
+    float: right;
+    line-height: 50px;
+    text-align: center;
+    font-size: 20px;
+    font-weight: 700;
+    background-color: #ececf7;
+    cursor: pointer;
+}
