--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>sign up</title>
-    <link rel="stylesheet" href="./css/signup.css" type="text/css">
+    <link rel="stylesheet" href="../../css/signup.css?after">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 <body>
@@ -11,18 +11,21 @@
 
 <form th:action="@{/main}" method="POST">
 
-    <div class="email_input_box" >
-        email : <input type="text" name="email" class="email_input" ><br>
+    <div>
+        email :
     </div>
-        <div class="email_check">
-            <div class = "email_check_input"  id="email_check_false">
-                <input class="email_check_input" disabled = "disabled">
-            </div>
-            <div class="email_check_button">
-                <span>인증번호 전송</span>
-            </div>
-            <div class="clearfix"></div>
+    <div class="email_input_box" >
+        <input type="text" name="email" class="email_input" ><br>
+    </div>
+    <div class="email_check">
+        <div class = "email_check_input_box"  id="email_check_false">
+            <input class="email_check_input" disabled = "disabled">
         </div>
+        <div class="email_check_button">
+            <span>인증번호 전송</span>
+        </div>
+        <div class="clearfix"></div>
+    </div>
 
     password : <input type="password" name="password"> <br>
 
@@ -70,12 +73,11 @@
     }
 </script>
 <script>
-    $(".mail_check_button").click(function(){
-        var email = $(".email_input").val();        // 입력한 이메일
-
+    $(".email_check_button").click(function(){
+        var e_mail = $('.email_input').val();        // 입력한 이메일
         $.ajax({
-            type:"GET",
-            url:"mailCheck?email=" + email
+            url : '${pageContext.request.contextPath}/signup/mailCheck?email=' + e_mail,
+            type : 'get'
         });
     });
 
