--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -74,9 +74,9 @@
 </script>
 <script>
     $(".email_check_button").click(function(){
-        var e_mail = $('.email_input').val();        // 입력한 이메일
+        var email = $('.email_input').val();        // 입력한 이메일
         $.ajax({
-            url : '${pageContext.request.contextPath}/signup/mailCheck?email=' + e_mail,
+            url:"mailCheck?email=" + email,
             type : 'get'
         });
     });
