--- a/src/main/resources/static/css/signup.css
+++ b/src/main/resources/static/css/signup.css
@@ -53,3 +53,10 @@ span{
     background-color: #ececf7;
     cursor: pointer;
 }
+
+.correct{
+    color : green;
+}
+.incorrect{
+    color : red;
+}
