--- a/src/main/resources/templates/ajaxTest.html
+++ b/src/main/resources/templates/ajaxTest.html
@@ -1,53 +1,39 @@
+<%@ page language="java" contentType="text/html; charset=UTF-8" pageEncoding="UTF-8"%>
+<%@ taglib uri="http://java.sun.com/jsp/jstl/core" prefix="c" %>
+<%@ taglib prefix="fmt" uri="http://java.sun.com/jsp/jstl/fmt"%>
+<html>
 <head>
-    <meta charset="UTF-8">
-    <link rel="shortcut icon" href="#">
-    <style>
-        div {
-            width: 200px;
-            height: 80px;
-            margin: 3px;
-            float: left;
-        }
-    </style>
-    <script
-            src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script>
-        $(document).ready(function() {
-            $("#menu1").click(function() {
-                $.ajax({
-                    url : '/menu',
-                    success : function(result) {
-                        $("#message1").html(result); },
-                    error : function(){ alert("로딩실패!"); }
-                });
-            });
-        });
-        $(document).ready(function() {
-            $("#menu2").click(function() {
-                $.ajax({
-                    url : "/menu",
-                    success : function(result) {
-                        var refine = $("#message2").html(result).find('li');
-                        console.log(result);
-                        console.log(refine);
-                        console.log(typeof(refine));
-                        $('#message2').html(refine);
-                    }
-                });
-            });
-        });
-    </script>
+    <!-- 합쳐지고 최소화된 최신 CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+    <!-- 부가적인 테마 -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">
+
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <title>회원가입</title>
 </head>
+
 <body>
-<div>
-    <a href="#" id="menu1">메뉴 보기 1</a>
-    <p>
-        <span id="message1"></span>
-</div>
-<div>
-    <a href="#" id="menu2">메뉴 보기 2</a>
-    <p>
-        <span id="message2"></span>
-</div>
+<section id="container">
+    <form action="/member/register" method="post">
+        <div class="form-group has-feedback">
+            <label class="control-label" for="userId">아이디</label>
+            <input class="form-control" type="text" id="userId" name="userId" />
+        </div>
+        <div class="form-group has-feedback">
+            <label class="control-label" for="userPass">패스워드</label>
+            <input class="form-control" type="password" id="userPass" name="userPass" />
+        </div>
+        <div class="form-group has-feedback">
+            <label class="control-label" for="userName">성명</label>
+            <input class="form-control" type="text" id="userName" name="userName" />
+        </div>
+        <div class="form-group has-feedback">
+            <button class="btn btn-success" type="submit" id="submit">회원가입</button>
+            <button class="cencle btn btn-danger" type="button">취소</button>
+        </div>
+    </form>
+</section>
+
 </body>
+
 </html>
