--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" name="google-signin-client_id" content="918079045792-2t4t5dqtdfgdj75d6vqshnuj3jm6lrr3.apps.googleusercontent.com">
     <title>login</title>
     <link rel="stylesheet" href="./css/login.css">
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
     <script src="./js/main.js"></script>
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
 </head>
 <body>
     <div class="wrapper">
@@ -46,7 +47,7 @@
                         </div>
                         <button type="submit">Login</button>
 <!--                        <input type="submit" title="로그인" alt="로그인" value="로그인" class="login">-->
-                        
+                        <a class="g-signin2"  onClick="onSignIn()">Google Login</a>
 <!--                    check_info 작업 예정-->
                         
                         <div class="check_info">
@@ -87,4 +88,29 @@
         <!-- footer 끝 -->
     </div>
 </body>
+<script>
+    function onSignIn(){
+        var auth2 = gapi.auth2.getAuthInstance()
+        if(auth2.isSignedIn.get()){
+            var profile = auth2.currentUser.get().getBasicProfile();
+            googleLoginPro(profile)
+            console.log('ID: ' + profile.getId()); // Do not send to your backend! Use an ID token instead.
+            console.log('Name: ' + profile.getName());
+            console.log('Image URL: ' + profile.getImageUrl());
+            console.log('Email: ' + profile.getEmail()); // This is null if the 'email' scope is not present.
+
+        }
+
+    }
+
+    function signOut() {
+        if(gapi.auth2 != undefined){
+            var auth2 = gapi.auth2.getAuthInstance();
+            auth2.signOut().then(function () {
+                console.log('User signed out.');
+            });
+        }
+        location.href= "/user/logOut.do"
+    }
+</script>
 </html>
