--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -43,7 +43,7 @@
     <!--닉네임 중복 검사-->
     <div class="form-group">
         <label for="user_id">닉네임</label>
-        <input type="text" class="user_input" id="user_id" name="name" placeholder="ID" required>
+        <input type="text" class="user_input" id="user_id" name="name" placeholder="ID">
         <span class="final_name_ck">이름을 입력해주세요.</span>
         <div class="check_font" id="id_check"></div>
     </div>
@@ -74,27 +74,34 @@
     var pwCheck = false;            // 비번
     var pwckCheck = false;          // 비번 확인
     var nameCheck = false;          // 이름
+    var nameOverlap = false;        //이름 중복 확인
     var pwckcorCheck = false;       // 비번 확인 일치 확인
     var addressCheck = false        // 주소
 
     $(document).ready(function(){
         $("#alert-success").hide();
         $("#alert-danger").hide();
-        console.log("dkdkdkdk")
         $("input").keyup(function(){
             var pwd1=$("#pwd1").val();
             var pwd2=$("#pwd2").val();
+
+            //pwck disabled 하기
+            var pwckDis = $('.pwck_input');
+            //비밀번호 일치 여부
             if(pwd1 != "" || pwd2 != ""){
                 if(pwd1 == pwd2){
                     $("#alert-success").show();
                     $("#alert-danger").hide();
                     $('.final_pwck_ck').css('display', 'none');
-                    $("#submit").removeAttr("disabled"); }
+                    pwckcorCheck = true;
+                    }
                 else{
                     $("#alert-success").hide();
                     $("#alert-danger").show();
-                    $("#submit").attr("disabled", "disabled");
+                    pwckcorCheck = false;
+                    pwckDis.attr("disabled", false);
                 }
+
             }
         });
 
@@ -103,9 +110,12 @@
             var mail = $('.email_input').val();            // 이메일 입력란
             var pw = $('.pw_input').val();                // 비밀번호 입력란
             var pwck = $('.pwck_input').val();            // 비밀번호 확인 입력란
+            var pwckDis = $('.pwck_input');
             var name = $('.user_input').val();            // 이름 입력란
+
             var addr = $('.address_input').val();       // 주소 입력란
 
+            //비밀번호 유효성
             if(pw == ""){
                 $('.final_pw_ck').css('display','block');
                 pwCheck = false;
@@ -114,15 +124,50 @@
                 pwCheck = true;
             }
 
-            if(pwck == ""){
+
+            //비밀번호 확인 유효성성
+           if(pwck == ""){
                 $('.final_pwck_ck').css('display','block');
                 pwckCheck = false;
+
             }else{
                 $('.final_pwck_ck').css('display', 'none');
                 pwckCheck = true;
+
             }
 
-            // $("#join_form").submit();
+            /* 이름 유효성 검사 */
+            if(name == ""){
+                $('.final_name_ck').css('display','block');
+                nameCheck = false;
+            }else{
+                $('.final_name_ck').css('display', 'none');
+                nameCheck = true;
+            }
+
+            if(mail == ""){
+                $('.final_mail_ck').css('display','block');
+                mailCheck = false;
+            }else{
+                $('.final_mail_ck').css('display', 'none');
+                mailCheck = true;
+            }
+
+            /* 주소 유효성 검사 */
+            if(addr == ""){
+                $('.final_addr_ck').css('display','block');
+                addressCheck = false;
+            }else{
+                $('.final_addr_ck').css('display', 'none');
+                addressCheck = true;
+            }
+
+            if(pwCheck&&pwckCheck&&pwckcorCheck&&nameCheck&&mailCheck&&mailnumCheck&&addressCheck&&nameOverlap ){
+                pwckDis.attr("disabled", true);
+                $("#join_form").submit();
+            }
+            return false;
+
         });
     });
 
@@ -174,12 +219,15 @@
         if(inputCode == code){                            // 일치할 경우
             checkResult.html("인증번호가 일치합니다.");
             checkResult.attr("class", "correct");
-            email.attr("disabled", true);
+            email.attr("readonly", true);
             inputCodeDis.attr("disabled", true);
+            mailnumCheck = true;
         } else {                                            // 일치하지 않을 경우
             checkResult.html("인증번호를 다시 확인해주세요.");
             checkResult.attr("class", "incorrect");
+            mailnumCheck = false;
         }
+
     });
 
 
@@ -201,25 +249,26 @@
                     // 1 : 아이디가 중복되는 문구
                     $("#id_check").text("사용중인 아이디입니다 :p");
                     $("#id_check").css("color", "red");
-                    $("#reg_submit").attr("disabled", true);
+
+                    nameOverlap =false;
                 } else {
 
                     if(idJ.test(user_id)){
                         // 0 : 아이디 길이 / 문자열 검사
                         $("#id_check").text("");
-                        $("#reg_submit").attr("disabled", false);
+                        nameOverlap =true;
 
                     } else if(user_id == ""){
 
                         $('#id_check').text('아이디를 입력해주세요 :)');
                         $('#id_check').css('color', 'red');
-                        $("#reg_submit").attr("disabled", true);
 
+                        nameOverlap =false;
                     } else {
 
                         $('#id_check').text("아이디는 한글,소문자,숫자 2~10자리만 가능합니다:)");
                         $('#id_check').css('color', 'red');
-                        $("#reg_submit").attr("disabled", true);
+                        nameOverlap =false;
                     }
 
                 }
