--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -50,7 +50,7 @@
 <!--                        <input type="submit" title="로그인" alt="로그인" value="로그인" class="login">-->
                         <a class="g-signin2"  onClick="onSignIn()">Google Login</a>
 <!--                    check_info 작업 예정-->
-                        
+                        <a href="javascript:kakaoLogin()">kakako Login</a>
                         <div class="check_info">
                             <span class="check_box">
                                 <input type="checkbox" name="nvlong">
@@ -90,6 +90,21 @@
     </div>
 </body>
 <script>
+    $(document).ready(function (){
+       $.ajax({
+           type : 'POST',
+           url: '/getKakaoApi',
+           data : {},
+           dataType : 'text',
+           success : function (data){
+               Kakao.init(data);
+           },
+           error : function (xhr, status, error){
+               alert("API 등록에 실패했습니다. " + error);
+           }
+       }) ;
+    });
+
     function onSignIn(){
         var auth2 = gapi.auth2.getAuthInstance()
         if(auth2.isSignedIn.get()){
@@ -141,5 +156,53 @@
         });
 
     }
+
+    function kakaoLoginPro(response){
+        var data = {id:response.id,email:response.kakao_account.email}
+        $.ajax({
+            type : 'POST',
+            url : '/kakaoLoginPro',
+            data : data,
+            dataType : 'json',
+            success : function(data){
+                console.log(data)
+                if(data.JavaData == "YES"){
+                    alert("로그인되었습니다.");
+                    location.href = '/main'
+                }else if(data.JavaData == "register"){
+                    $("#kakaoEmail").val(response.kakao_account.email);
+                    $("#kakaoId").val(response.id);
+                    $("#kakaoForm").submit();
+                }else{
+                    alert("로그인에 실패했습니다");
+                }
+
+            },
+            error: function(xhr, status, error){
+                alert("로그인에 실패했습니다."+error);
+            }
+        });
+
+    }
+    function kakaoLogin() {
+        Kakao.Auth.login({
+            success: function (response) {
+                Kakao.API.request({
+                    url: '/v2/user/me',
+                    success: function (response) {
+                        kakaoLoginPro(response)
+                    },
+                    fail: function (error) {
+                        console.log(error)
+                    },
+                })
+            },
+            fail: function (error) {
+                console.log(error)
+            },
+        })
+    }
+
 </script>
+<script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
 </html>
