--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -52,10 +52,8 @@
 <!--                        <input type="submit" title="로그인" alt="로그인" value="로그인" class="login">-->
 <!--                        <a class="g-signin2"  onClick="onSignIn()">Google Login</a>-->
 <!--                    check_info 작업 예정-->
-<!--                        <a href="javascript:kakaoLogin()">kakako Login</a>-->
-                        <div class="kakaoLogin">
-                            <span>카카오로그인</span>
-                        </div>
+                        <a href="javascript:kakaoLogin()">kakako Login</a>
+
                         <div class="check_info">
                             <span class="check_box">
                                 <input type="checkbox" name="nvlong">
@@ -94,20 +92,21 @@
         <!-- footer 끝 -->
     </div>
 </body>
+
 <script>
-    $(".kakaoLogin").click(function (){
 
+    $(document).ready(function (){
        $.ajax({
-
-           url: '/getKakaoApi',
-           type : 'POST',
+           url: "/getKakaoApi",
+           type : 'get',
            data: {},
            dataType : 'text',
            success : function (data){
                Kakao.init(data);
            },
-           error : function (data){
-               alert("API 등록에 실패했습니다. " + data);
+           error : function (request, error){
+               // alert("API 등록에 실패했습니다. ");
+               alert("code:"+request.status+"\n"+"message:"+request.responseText+"\n"+"error:"+error);
            }
        }) ;
     });
