--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -50,7 +50,7 @@
                         </div>
                         <button type="submit">Login</button>
 <!--                        <input type="submit" title="로그인" alt="로그인" value="로그인" class="login">-->
-<!--                        <a class="g-signin2"  onClick="onSignIn()">Google Login</a>-->
+                        <a class="g-signin2"  onClick="onSignIn()">Google Login</a>
 <!--                    check_info 작업 예정-->
                         <a href="javascript:kakaoLogin()">kakako Login</a>
 
