구글 로그인 중단

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -115,12 +115,12 @@
         var auth2 = gapi.auth2.getAuthInstance()
         if(auth2.isSignedIn.get()){
             var profile = auth2.currentUser.get().getBasicProfile();
-            googleLoginPro(profile)
+
             console.log('ID: ' + profile.getId()); // Do not send to your backend! Use an ID token instead.
             console.log('Name: ' + profile.getName());
             console.log('Image URL: ' + profile.getImageUrl());
             console.log('Email: ' + profile.getEmail()); // This is null if the 'email' scope is not present.
-
+            googleLoginPro(profile)
         }
 
     }
@@ -136,7 +136,7 @@
     }
 
     function googleLoginPro(response){
-        var data = {id:response.id,email:response.kakao_account.email}
+        var data = {id:response.id,email:response.email}
         $.ajax({
             type : 'POST',
             url : '/googleLoginPro',
