--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -46,6 +46,7 @@
                             </div>
                         </div>
                         <button type="submit">Login</button>
+                        <a href="/oauth2/authorization/google" class="btn btn-success active" role="button">Google Login</a>
 <!--                        <input type="submit" title="로그인" alt="로그인" value="로그인" class="login">-->
 <!--                    check_info 작업 예정-->
 
