--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -58,7 +58,7 @@
             ID : <span sec:authentication="name"></span> <br>
             소유 권한 : <span sec:authentication="authorities"></span> <br>
             <h3>안녕하세요! <span sec:authentication="principal.name"></span>님</h3>
-            집 : <span sec:authentication="principal.addr"></span> <br>
+<!--            집 : <span sec:authentication="principal.addr"></span> <br>-->
 
             <form id="logout" action="/logout" method="POST">
                 <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
