--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -193,6 +193,7 @@
         var email = $(".email_input").val();            // 입력한 이메일
         var checkBox = $(".email_check_input");         // 인증번호 입력란
         var boxWrap = $(".email_check_input_box");      // 인증번호 입력란 박스
+        console.log(email);
 
         $.ajax({
 
@@ -200,10 +201,12 @@
             type : 'get',
             success:function (data){
                 // console.log("data = " + data);
-
+                console.log("성공");
                 checkBox.attr("disabled", false);
                 boxWrap.attr("id", "email_check_true");
                 code = data;
+            }, error : function() {
+                console.log("실패");
             }
         });
     });
@@ -247,7 +250,7 @@
 
                 if (data == 1) {
                     // 1 : 아이디가 중복되는 문구
-                    $("#id_check").text("사용중인 아이디입니다 :p");
+                    $("#id_check").text("사용중인 닉네임입니다 :p");
                     $("#id_check").css("color", "red");
 
                     nameOverlap =false;
@@ -260,13 +263,13 @@
 
                     } else if(user_id == ""){
 
-                        $('#id_check').text('아이디를 입력해주세요 :)');
+                        $('#id_check').text('닉네임를 입력해주세요 :)');
                         $('#id_check').css('color', 'red');
 
                         nameOverlap =false;
                     } else {
 
-                        $('#id_check').text("아이디는 한글,소문자,숫자 2~10자리만 가능합니다:)");
+                        $('#id_check').text("닉네임은 한글,소문자,숫자 2~10자리만 가능합니다:)");
                         $('#id_check').css('color', 'red');
                         nameOverlap =false;
                     }
