로그인 반복..

--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -9,7 +9,7 @@
 <body>
 <h1>Sign Up</h1> <hr>
 
-<form th:action="@{/main}" method="POST" id="join_form">
+<form th:action="@{/user}" method="POST" id="join_form">
 
     <div>
         email :
