--- a/src/main/resources/templates/coLogin.html
+++ b/src/main/resources/templates/coLogin.html
@@ -22,7 +22,7 @@
         <!-- content 시작 -->
         <section>
             <div class="content">
-                <form id="login" action="/login" method="post">
+                <form id="login" action="/coLogin" method="post">
                     <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
                     <fieldset class="login_form">
                         <legend class="hidden">로그인</legend>
